# Research-Agent

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .gitignore  ACTION_ITEMS.md  API.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_INDEX.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  DEPLOYMENT.md  DOCS_CLEANUP_SUMMARY.md  DOCS_COMPARISON.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_IMPROVEMENTS.md  Dockerfile  Dockerfile.spaces  FIX_SUMMARY.md  IMPROVEMENTS.md  Jenkinsfile  Jenkinsfile.sonar  LICENSE  MERGE_CHECKLIST.md  QUICK_REFERENCE.md  README.md  REVIEW_SUMMARY.md  TEST_RESULTS.md  cleanup_docs.sh  code_review_summary.py  docker-compose.full.yml  docker-compose.yml  env.example  pyproject.toml  reporte_Test_Topic.md  reporte_final.docx  reporte_final.html  requirements.txt  research_sessions.db  (+1 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_source.md
.github/workflows/: ci.yml  docker-publish.yml  hf-sync.yml  pypi-publish.yml
docs/: API.md  ARCHITECTURE.md  CODE_REVIEW.md  DEPLOYMENT.md  DEVELOPER_REFERENCE.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md
docs/archive/: ACTION_ITEMS_2024.md  CODE_REVIEW_2024.md  FIX_SUMMARY_2024.md  IMPROVEMENTS_2024.md
docs/articles/: LangGraph_Multi_Source_Research.md  devto_post.md
hf_spaces/: README.md
scripts/: deploy_hf_spaces.sh  quickstart.sh  record_demo.py  run_sonar.sh
scripts/archive/: fix_critical_issues.sh  fix_imports.sh
src/: agent.py  app.py  async_research.py  cache.py  config.py  db_manager.py  health.py  i18n.py  llm.py  logging_config.py  main.py  metrics.py  progress.py  quality.py  state.py  thread_utils.py  utils.py  validators.py
src/tools/: chat_tools.py  parallel_tools.py  rag_tools.py  reddit_tools.py  reporting_tools.py  research_tools.py  router_tools.py  synthesis_tools.py  translation_tools.py  vector_store.py  youtube_tools.py
tests/: conftest.py  test_agent.py  test_chat_tools.py  test_load.py  test_persistence.py  test_rag_tools.py  test_reddit_tools.py  test_reporting_tools.py  test_research_tools.py  test_resilience.py  test_router_tools.py  test_security.py  test_synthesis_tools.py  test_youtube_tools.py
wiki/: Architecture-and-Data-Flow.md  Database-and-Sessions.md  Development-Guide.md  Home.md  Personas-and-Depth-Modes.md  RAG-Pipeline.md  Research-Sources.md
